# starcultureai

./: .env.example  README.md  app.py  pyproject.toml
config/: startup_sim.yaml
startup_sim/: __init__.py  agent_factory.py  config_schema.py  loader.py  orchestrator.py  ui_logic.py
startup_sim/tools/: __init__.py  github_tools.py  pm_tools.py  registry.py  shell_tools.py
tests/: test_e2e.py
