[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "startup-sim"
version = "0.1.0"
description = "Multi-agent startup simulation with Chainlit UI"
authors = [{name = "StarCulture AI"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai",
  "openai-agents",
  "python-dotenv",
  "pyyaml",
  "pydantic",
  "chainlit",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
